--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [pirateplay]
 # pirateplay.se base url
-apiBaseUrl = http://pirateplay.se:80/api/
+apiBaseUrl = http://pirateplay.se:80/api
 
 # get streams
 getStreams = get_streams.xml
