Starting to get somewhere

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,8 @@
 # pirateplay.se base url
 apiBaseUrl = http://pirateplay.se:80/api
 
-# get streams
-getStreams = get_streams.xml?url=
+# get streams in XML
+getStreamsXml = get_streams.xml?url=
 
+# get streams in json
+getStreamsJson = get_streams.js?url=
