Added quality selection, and moved quality settings to config

--- a/config.ini
+++ b/config.ini
@@ -7,3 +7,10 @@ getStreamsXml = get_streams.xml?url=
 
 # get streams in json
 getStreamsJson = get_streams.js?url=
+
+[quality]
+minVidBitRate = 1600 
+maxVidBitRate = 1700
+
+minVidWidth = 900
+maxVidWidth = 1000
