Checking if it's possible to get XML

--- a/config.ini
+++ b/config.ini
@@ -3,10 +3,13 @@
 apiBaseUrl = http://pirateplay.se:80/api
 
 # get streams in XML
-getStreamsXml = get_streams.xml?url=
+getStreamsXML = get_streams.xml?url=
 
 # get streams in json
 getStreamsJson = get_streams.js?url=
+
+maxTrys = 10
+waitTime = 1
 
 [quality]
 minVidBitRate = 1600 
