--- a/config.ini
+++ b/config.ini
@@ -28,5 +28,8 @@ mask = 436
 scores = 60
 
 [encoder]
-ffprobePath = /usr/bin/ffprobe
-ffmpegPath = /usr/bin/ffmpeg
+#ffprobePath = /usr/bin/ffprobe
+#ffmpegPath = /usr/bin/ffmpeg
+
+ffprobePath = /usr/bin/avprobe
+ffmpegPath = /usr/bin/avconv
