Added config for rtmpdump options in config

--- a/config.ini
+++ b/config.ini
@@ -27,9 +27,14 @@ mask = 436
 [decoration]
 scores = 60
 
-[encoder]
-#ffprobePath = /usr/bin/ffprobe
-#ffmpegPath = /usr/bin/ffmpeg
+[ffmpeg]
+ffprobePath = /usr/bin/ffprobe
+ffmpegPath = /usr/bin/ffmpeg
 
-ffprobePath = /usr/bin/avprobe
-ffmpegPath = /usr/bin/avconv
+#ffprobePath = /usr/bin/avprobe
+#ffmpegPath = /usr/bin/avconv
+
+[rtmpdump]
+rtmpdumpOptions = --live
+#rtmpdumpoptions = --realtime
+#rtmpdumpOptions = --live --realtime
