Major work on recoding. Use -c <extension>

--- a/config.ini
+++ b/config.ini
@@ -31,10 +31,14 @@ scores = 60
 ffprobePath = /usr/bin/ffprobe
 ffmpegPath = /usr/bin/ffmpeg
 
-#ffprobePath = /usr/bin/avprobe
-#ffmpegPath = /usr/bin/avconv
+avprobePath = /usr/bin/avprobe
+avconvPath = /usr/bin/avconv
 
 [rtmpdump]
 rtmpdumpOptions = --live
 #rtmpdumpoptions = --realtime
 #rtmpdumpOptions = --live --realtime
+
+[video]
+# accepted video types
+videoExtensions = asf,avi,flv,mkv,mp4,wmv
