Chooisng between ffmpeg and avconv.

--- a/config.ini
+++ b/config.ini
@@ -27,6 +27,22 @@ mask = 436
 [decoration]
 scores = 60
 
+# Available text colors: red, green, yellow, blue, magenta, cyan, white (default)
+defaultTextColor = default
+
+# Available text highlights: red, green, yellow, blue, magenta, cyan, white (default)
+defaultBackgroundColor = default
+
+# Available attributes: bold, dark, underline, blink, reverse, concealed (default)
+defaultTextStyle = default
+
+headerText = '\033[95m'
+blueText = '\033[94m'
+greenText = '\033[92m'
+yellowText = '\033[93m'
+redText = '\033[91m'
+normalText = '\033[0m'
+
 [ffmpeg]
 ffprobePath = /usr/bin/ffprobe
 ffmpegPath = /usr/bin/ffmpeg
