Further work on the -p option. Changes concerning checking of subtitles.

--- a/config.ini
+++ b/config.ini
@@ -60,3 +60,11 @@ rtmpdumpOptions = --live
 videoExtensions = asf,avi,flv,mkv,mp4,wmv
 
 videoCodec = libx264
+
+[misc]
+bashSuffix = sh
+listSuffix = list
+
+[textRecognition]
+seasonText = S&auml;song
+videoText = video
