Now download info at the end

--- a/config.ini
+++ b/config.ini
@@ -68,3 +68,7 @@ listSuffix = list
 [textRecognition]
 seasonText = S&auml;song
 videoText = video
+
+dlCommentSuccess = File was sucessfully downloaded
+dlCommentError = File was not fully downloaded
+
