--- a/config.ini
+++ b/config.ini
@@ -71,4 +71,5 @@ videoText = video
 
 dlCommentSuccess = File was sucessfully downloaded
 dlCommentError = File was not fully downloaded
+dlCommentExist = File already existed
 
