--- a/config.ini
+++ b/config.ini
@@ -72,4 +72,5 @@ videoText = video
 dlCommentSuccess = File was sucessfully downloaded
 dlCommentError = File was not fully downloaded
 dlCommentExist = File already existed
+dlCommentNoSub = No subtitle available
 
