Now script is finding videos and generating XML

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,11 @@
 # pirateplay.se base url
 apiBaseUrl = http://pirateplay.se:80/api
 
+apiBaseUrlLocal = http://localhost:8082/api
+apiBaseUrlPiratePlay = http://pirateplay.se:80/api
+
+localPythonXMLGenerator = False
+
 # get streams in XML
 getStreamsXML = get_streams.xml?url=
 
