Starting the work on setting xml source

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,10 @@
 [pirateplay]
-# pirateplay.se base url
-apiBaseUrl = http://pirateplay.se:80/api
-
+# local pirateplay.se base url
 apiBaseUrlLocal = http://localhost:8082/api
+# pirateplay.se base url
 apiBaseUrlPiratePlay = http://pirateplay.se:80/api
+
+defaultXmlSource = pirateplay 
 
 localPythonXMLGenerator = False
 
