Now local pyhton XML generator is working on svtplay addresses

--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ apiBaseUrlPiratePlay = http://pirateplay.se:80/api
 
 defaultXmlSource = pirateplay 
 
-localPythonXMLGenerator = False
+localPythonXMLGenerator = True
 
 # get streams in XML
 getStreamsXML = get_streams.xml?url=
