Now program chooses between local and remote pirateplay.se api service

--- a/config.ini
+++ b/config.ini
@@ -8,6 +8,8 @@ defaultXmlSource = pirateplay
 
 localPythonXMLGenerator = True
 
+prioritizeApiBaseUrlLocal = True
+
 # get streams in XML
 getStreamsXML = get_streams.xml?url=
 
