Now a whole new way to obtain videolinks...

--- a/config.ini
+++ b/config.ini
@@ -16,6 +16,10 @@ getStreamsXML = get_streams.xml?url=
 # get streams in json
 getStreamsJson = get_streams.js?url=
 
+# priority order for ways to get streams
+# available are: localPiratePlay, piratePlay, svtPlayDl, teve, internal
+xmlPriorityOrder = svtPlayDl, internal, localPiratePlay, piratePlay, teve
+
 maxTrys = 10
 waitTime = 1
 
@@ -65,7 +69,7 @@ rtmpdumpOptions = --live
 
 [video]
 # accepted video types
-videoExtensions = asf,avi,flv,mkv,mp4,wmv
+videoExtensions = asf, avi, flv, mkv, mp4, wmv
 
 videoCodec = libx264
 
