--- a/config.ini
+++ b/config.ini
@@ -23,6 +23,9 @@ xmlPriorityOrder = svtPlayDl, internal, localPiratePlay, piratePlay, teve
 maxTrys = 10
 waitTime = 1
 
+[svtplay-dl]
+svtplaydlVersion=0
+
 [quality]
 minVidBitRate = 1400 
 maxVidBitRate = 1700
